--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,13 +77,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.eventchat"
+    namespace 'com.anonymous.eventchat'
     defaultConfig {
-        applicationId "com.eventchat"
+        applicationId 'com.anonymous.eventchat'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
     }
     signingConfigs {
         debug {
