--- a/package.json
+++ b/package.json
@@ -17,24 +17,24 @@
     "@reduxjs/toolkit": "^2.3.0",
     "crypto-browserify": "^3.12.1",
     "EventChat": "file:",
-    "expo": "^51.0.38",
-    "expo-linear-gradient": "~13.0.2",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "^0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0",
+    "expo": "^52.0.6",
+    "expo-font": "~13.0.1",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-splash-screen": "^0.29.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "stream-browserify": "^3.0.0",
-    "styled-components": "^6.1.13",
-    "expo-font": "~12.0.10",
-    "expo-splash-screen": "~0.27.7"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -48,7 +48,7 @@
     "@react-native/metro-config": "0.76.1",
     "@react-native/typescript-config": "0.76.1",
     "@tsconfig/react-native": "^3.0.5",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
