--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-firebase/app": "^21.4.1",
+    "@react-native-firebase/auth": "^21.4.1",
+    "@react-native-firebase/firestore": "^21.4.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
@@ -21,6 +24,7 @@
     "expo-font": "~13.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-splash-screen": "^0.29.9",
+    "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.1",
