--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "preinstall": "npm install --legacy-peer-deps || true",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "lint": "eslint .",
