Screen for password confirmation

--- a/app.json
+++ b/app.json
@@ -30,6 +30,7 @@
       "eas": {
         "projectId": "6a33a00f-ae6f-4124-82a4-8f56d26c3dd8"
       }
-    }
+    },
+    "newArchEnabled": true
   }
 }
