--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "preinstall": "npm install --legacy-peer-deps || true",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "lint": "eslint .",
@@ -20,7 +19,6 @@
     "@react-navigation/stack": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "crypto-browserify": "^3.12.1",
-    "EventChat": "file:",
     "expo": "^52.0.6",
     "expo-av": "~15.0.1",
     "expo-font": "~13.0.1",
@@ -40,7 +38,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "stream-browserify": "^3.0.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
