--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^21.4.1",
     "@react-native-firebase/auth": "^21.4.1",
     "@react-native-firebase/firestore": "^21.4.1",
@@ -20,11 +21,14 @@
     "@reduxjs/toolkit": "^2.3.0",
     "crypto-browserify": "^3.12.1",
     "expo": "^52.0.6",
+    "expo-auth-session": "~6.0.0",
     "expo-av": "~15.0.1",
     "expo-font": "~13.0.1",
     "expo-linear-gradient": "~14.0.1",
+    "expo-random": "^14.0.1",
     "expo-splash-screen": "^0.29.9",
-    "firebase": "^11.0.1",
+    "expo-web-browser": "~14.0.1",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.1",
@@ -38,8 +42,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "stream-browserify": "^3.0.0",
-    "styled-components": "^6.1.13",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
