--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.6.0",
     "@react-native-firebase/auth": "^21.6.0",
     "@react-native-firebase/firestore": "^21.4.1",
-    "@react-navigation/native": "^7.0.0",
-    "@react-navigation/stack": "^7.0.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.9",
     "crypto-browserify": "^3.12.1",
@@ -37,15 +39,17 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.0.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "stream-browserify": "^3.0.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "expo-blur": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
